# decisionrl

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  RELEASING.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml  publish.yml  verify.yml
deploy/: Dockerfile
deploy/models/: README.md
docs/: algorithms.md  alphazero.md  benchmarks.md  cli.md  cookbook.md  environments.md  evolution.md  getting-started.md  imitation.md  index.md  meta.md  migration.md  multiagent.md  serving.md  text.md
docs/demo/: cartpole.html  cartpole_policy.json  inventory.html
examples/: alphazero_demo.py  applied_demo.py  applied_rl.ipynb  applied_rl_demo.py  benchmark.py  benchmark_scores.py  benchmark_vs_baselines.py  complex_scenarios.py  curiosity_exploration.py  decision_transformer.py  evolution_demo.py  make_applied_browser_demo.py  make_browser_demo.py  multiagent_selfplay.py  offline_td3bc.py  ppo_gymnasium_vectorized.py  quickstart.ipynb  record_gifs.py  record_scenario_gifs.py  rlhf_grpo.py  tabular_gridworld.py  train_dqn_gridworld.py  train_ppo_cartpole.py  train_sac_pendulum.py  tune_optuna.py  verify_applied_claims.py
examples/configs/: dqn_gridworld.json  ppo_cartpole.yaml
src/decisionrl/: __init__.py  __main__.py  baselines.py  cli.py  config.py  configs.py  dashboard.py  data.py  distributed.py  evaluation.py  imitation.py  meta.py  registry.py  rlhf.py  solvers.py  tracking.py  tuning.py  zoo.py
src/decisionrl/algorithms/: __init__.py  c51.py  cql.py  decision_transformer.py  diffusion_policy.py  dreamer.py  grpo.py  her.py  impala.py  iql.py  mbpo.py  off_policy.py  qrdqn.py  recurrent_ppo.py  rssm.py  td3bc.py  trpo.py
src/decisionrl/alphazero/: __init__.py  games.py
src/decisionrl/buffers/: rollout.py
src/decisionrl/core/: __init__.py  env.py  spaces.py  types.py
src/decisionrl/envs/: __init__.py  acrobot.py  bandit.py  bitflipping.py  energy.py  grid_world.py  gym.py  inventory.py  joint_pricing_inventory.py  lunar_lander.py  navigation.py  nonstationary_inventory.py  pendulum.py  point_mass.py  pricing.py  queueing.py  supply_chain.py  thermostat.py
src/decisionrl/evolution/: __init__.py  neuroevolution.py
src/decisionrl/exploration/: __init__.py  schedules.py
src/decisionrl/multiagent/: __init__.py  ippo.py  pettingzoo.py
src/decisionrl/networks/: mlp.py  q_networks.py  value.py
src/decisionrl/serving/: server.py
src/decisionrl/text/: __init__.py  gpt.py  rlhf.py
src/decisionrl/training/: callbacks.py
src/decisionrl/utils/: dashboard.py  logger.py  render.py  seeding.py  torch_utils.py
src/decisionrl/wrappers/: __init__.py  async_vector.py  normalize.py  observation.py  time_limit.py
src/reinforce/: __init__.py  __main__.py  cli.py  dashboard.py  data.py  distributed.py  evaluation.py  imitation.py  meta.py  registry.py  rlhf.py  tuning.py  zoo.py
src/reinforce/algorithms/: __init__.py  a2c.py  base.py  c51.py  cql.py  ddpg.py  decision_transformer.py  dqn.py  dreamer.py  grpo.py  iql.py  off_policy.py  ppo.py  rainbow.py  reinforce.py  rssm.py  sac.py  sac_discrete.py  tabular.py  td3.py  td3bc.py
src/reinforce/alphazero/: __init__.py  alphazero.py  mcts.py  network.py
src/reinforce/buffers/: __init__.py  prioritized.py  replay.py
src/reinforce/core/: __init__.py  agent.py  spaces.py
src/reinforce/envs/: __init__.py  bandit.py  bitflipping.py  cartpole.py  grid_world.py  gym.py  inventory.py  lunar_lander.py  mountain_car.py  navigation.py  pendulum.py  portfolio.py  reacher.py
src/reinforce/evolution/: __init__.py  base.py  evolutionary.py  functions.py  neuroevolution.py  swarm.py
src/reinforce/exploration/: __init__.py  curiosity.py  noise.py
src/reinforce/multiagent/: __init__.py  env.py  ippo.py  pettingzoo.py
src/reinforce/networks/: __init__.py  cnn.py  dynamics.py  noisy.py  policies.py  q_networks.py
src/reinforce/serving/: __init__.py  export.py  server.py
src/reinforce/text/: __init__.py  gpt.py
src/reinforce/training/: __init__.py  callbacks.py  evaluate.py
src/reinforce/utils/: __init__.py  dashboard.py  logger.py  render.py  running_mean_std.py  torch_utils.py
src/reinforce/wrappers/: __init__.py  async_vector.py  normalize.py  observation.py  vector.py
tests/: conftest.py  test_alphazero.py  test_applied.py  test_applied_correctness.py  test_applied_envs.py  test_async_vector.py  test_buffers.py  test_callbacks.py  test_cli.py  test_config.py  test_continuous.py  test_curiosity.py  test_dashboard.py  test_decision_transformer.py  test_dict_obs.py  test_diffusion.py  test_distributed.py  test_dqn.py  test_dreamer.py  test_ecosystem.py  test_envs.py  test_evaluation.py  test_evolution.py  test_exploration.py  test_grpo.py  test_gym_register.py  test_her.py  test_imitation.py  test_impala.py  test_live_dashboard.py  test_mbpo.py  test_meta.py  test_multiagent.py  test_networks.py  test_offline.py  test_pg.py  test_pixels.py  test_properties.py  test_recurrent.py  test_registry.py  (+15 more)
zoo/: cartpole-ppo.onnx  cartpole-ppo.onnx.json
