[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "reinforce"
version = "0.1.0"
description = "A dependency-light, correctness-first reinforcement learning foundation: readable algorithms, composable components, batteries-included environments."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Denis Drobyshev", email = "drobishev.denis@icloud.com" }]
keywords = [
    "reinforcement-learning",
    "deep-reinforcement-learning",
    "machine-learning",
    "pytorch",
    "dqn",
    "ppo",
    "sac",
    "td3",
    "rl",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = [
    "numpy>=1.21",
    "torch>=1.13",
]

[project.optional-dependencies]
gym = ["gymnasium>=0.29"]
logging = ["tensorboard>=2.10"]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1",
    "gymnasium[classic-control]>=0.29",
    "matplotlib>=3.5",
]

[project.scripts]
reinforce = "reinforce.cli:main"

[project.urls]
Homepage = "https://github.com/DenisDrobyshev/reinforce"
Repository = "https://github.com/DenisDrobyshev/reinforce"
Issues = "https://github.com/DenisDrobyshev/reinforce/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/reinforce"]

[tool.hatch.build.targets.sdist]
include = ["src/reinforce", "README.md", "LICENSE"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
filterwarnings = ["ignore::DeprecationWarning"]
markers = [
    "slow: long-running learning/integration tests (deselect with '-m \"not slow\"')",
]

[tool.ruff]
line-length = 100
target-version = "py39"
src = ["src", "tests"]

[tool.ruff.lint]
# UP (pyupgrade) is intentionally omitted: the library targets Python 3.9 and
# uses classic typing (Dict/Optional) with `from __future__ import annotations`.
select = ["E", "F", "I", "W", "B", "C4", "SIM"]
ignore = ["E501", "B008", "C401", "C408"]

[tool.ruff.lint.isort]
known-first-party = ["reinforce"]
