[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
# One name everywhere: pip install decisionrl / import decisionrl.
name = "decisionrl"
version = "0.2.0"
description = "Applied reinforcement learning for operational decisions: pricing, inventory, energy, queues and supply chains — plus a correctness-first library of 31 algorithms."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Denis Drobyshev", email = "drobishev.denis@icloud.com" }]
keywords = [
    "reinforcement-learning",
    "deep-reinforcement-learning",
    "machine-learning",
    "pytorch",
    "dqn",
    "ppo",
    "sac",
    "td3",
    "rl",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = [
    "numpy>=1.21",
    "torch>=1.13",
]

[project.optional-dependencies]
gym = ["gymnasium>=0.29"]
logging = ["tensorboard>=2.10"]
serve = ["onnx>=1.14", "onnxruntime>=1.16", "fastapi>=0.100", "uvicorn>=0.23"]
dashboard = ["flask>=2.0", "plotly>=5.0"]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1",
    "gymnasium[classic-control]>=0.29",
    "matplotlib>=3.5",
    "mkdocs-material>=9.0",
    "tqdm>=4.60",
    "optuna>=3.0",
    "mypy>=1.0",
    "plotly>=5.0",
    "hypothesis>=6.0",
    "onnx>=1.14",
    "onnxruntime>=1.16",
    "fastapi>=0.100",
    "uvicorn>=0.23",
    "httpx>=0.24",
    "flask>=2.0",
]

[project.scripts]
decisionrl = "decisionrl.cli:main"

[project.urls]
Homepage = "https://github.com/DenisDrobyshev/decisionrl"
Repository = "https://github.com/DenisDrobyshev/decisionrl"
Issues = "https://github.com/DenisDrobyshev/decisionrl/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/decisionrl"]

[tool.hatch.build.targets.sdist]
include = ["src/decisionrl", "README.md", "LICENSE"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
filterwarnings = ["ignore::DeprecationWarning"]
markers = [
    "slow: long-running learning/integration tests (deselect with '-m \"not slow\"')",
]

[tool.ruff]
line-length = 100
target-version = "py39"
src = ["src", "tests"]
extend-exclude = ["*.ipynb"]

[tool.ruff.lint]
# UP (pyupgrade) is intentionally omitted: the library targets Python 3.9 and
# uses classic typing (Dict/Optional) with `from __future__ import annotations`.
select = ["E", "F", "I", "W", "B", "C4", "SIM"]
ignore = ["E501", "B008", "C401", "C408"]

[tool.ruff.lint.isort]
known-first-party = ["decisionrl"]

[tool.mypy]
python_version = "3.9"
files = ["src/decisionrl"]
ignore_missing_imports = true
implicit_optional = true
follow_imports_for_stubs = true
# Categories dominated by PyTorch / duck-typed space false positives are muted;
# name-resolution and structural checks stay on.
disable_error_code = [
    "arg-type",
    "attr-defined",
    "override",
    "operator",
    "index",
    "assignment",
]

# Don't analyze NumPy's stubs: their version resolved on Python 3.12 uses the
# PEP 695 `type` statement (unparseable under python_version 3.9) and NumPy 2.x
# shape typing is over-strict. Treat NumPy as Any so mypy is version-stable.
[[tool.mypy.overrides]]
module = ["numpy", "numpy.*"]
follow_imports = "skip"
ignore_missing_imports = true
